# space_robot_ws

./: .gitignore
src/space_robot/: .setup_assistant  CMakeLists.txt  package.xml
src/space_robot/bringup/config/: controllers.yaml  ros_gz_bridge.yaml
src/space_robot/bringup/launch/: gazebo.launch.py  robot_state_publisher.launch.py  rps.launch.py  rviz.launch.py  space_robot.launch.py  space_robot_without_moveit.launch.py  spawn_controllers.launch.py
src/space_robot/common/include/: common_structs.h  macro.h
src/space_robot/config/: kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  space_robot.srdf  space_robot.urdf.xacro
src/space_robot/description/gazebo/: depth_camera.gazebo.xacro  robot.gazebo.xacro
src/space_robot/description/ros2_control/: robot.ros2_control.xacro  space_robot.ros2_control.xacro
src/space_robot/description/sdf/: space_world.sdf
src/space_robot/description/urdf/: robot_description.urdf.xacro  space_robot.urdf.xacro
src/space_robot/description/urdf/robot_model/: robot_base.urdf.xacro
src/space_robot/kinematic_solver/include/: chain_fk_solver.h  chain_ik_solver.h  kdl_floating_kinematics_plugin.h
src/space_robot/kinematic_solver/src/: chain_fk_solver.cpp  chain_ik_solver.cpp  kdl_floating_kinematics_plugin.cpp
src/space_robot/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  space_robot.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  test_forward_position_controller.launch.py  warehouse_db.launch.py
src/space_robot/planning/: CMakeLists.txt
src/space_robot/planning/include/: custom_trajectory_publisher.h
src/space_robot/planning/src/: custom_trajectory_publisher.cpp  planning_node.cpp
src/space_robot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/space_robot_config/config/: joint_limits.yaml  moveit_controllers.yaml  space_robot.srdf  space_robot.urdf.xacro
src/space_robot_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  space_robot.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/space_robot_config/test/: space_robot.sdf  space_robot.urdf
src/space_robot_learning/: CMakeLists.txt  package.xml
src/space_robot_learning/test/: space_robot_gazebo.sdf  space_robot_gazebo.urdf
src/space_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/space_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  space_robot.ros2_control.xacro  space_robot.srdf  space_robot.urdf.xacro
src/space_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  (+5 more)
src/tmp_space_robot_config_with_gripper/: .setup_assistant  CMakeLists.txt  package.xml
(+37 files in other folders)
